--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,3 +24,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
 }
+
+dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'org.rajawali3d:rajawali:1.0.186-SNAPSHOT@aar'
+}
